--- a/index.html
+++ b/index.html
@@ -205,12 +205,24 @@
     <section id="projects" class="wrapper" data-aos="fade-up">
       <h2>Projects</h2>
       <div>
-        <h3>Responsive Business Website</h3>
+        <a href="https://benevolent-kangaroo-87698a.netlify.app/" target="_blank" style="padding: 12px 24px; background-color: #007bff; color: white; text-decoration: none; border-radius: 6px;">
+  Launch Live Demo
+</a>
+
+    <h3>Responsive Business Website</h3>
         <p>Designed and developed a responsive multipage business site using HTML, CSS, and JavaScript.</p>
         <h3>E-commerce Product Page</h3>
+        <a href="https://shoemax.netlify.app/" target="_blank" style="background-color: #ff5733; color: white; padding: 12px 24px; border-radius: 8px; text-decoration: none; font-weight: bold;">
+  Go to ShoeMax
+</a>
+
         <p>Built a product showcase page with cart functionality using Bootstrap and JS.</p>
         <h3>Portfolio Website</h3>
         <p>This current website demonstrates my personal brand, contact form, and animations.</p>
+        <a href="https://charming-meringue-f25278.netlify.app/" target="_blank" style="padding: 10px 20px; background-color: #4CAF50; color: white; text-decoration: none; border-radius: 5px;">
+  Visit My Website
+</a>
+
       </div>
     </section>
 
